# rust_binary_template

./: CODE_OF_CONDUCT.md  Cargo.toml  README.md
src/: main.rs
